--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -8,6 +8,8 @@ set(IDYNTREE_CORE_EXP_HEADERS include/iDynTree/Core/Axis.h
                               include/iDynTree/Core/ArticulatedBodyInertia.h
                               include/iDynTree/Core/ClassicalAcc.h
                               include/iDynTree/Core/Direction.h
+                              include/iDynTree/Core/EigenHelpers.h
+                              include/iDynTree/Core/InertiaNonLinearParametrization.h
                               include/iDynTree/Core/MatrixDynSize.h
                               include/iDynTree/Core/MatrixFixSize.h
                               include/iDynTree/Core/Position.h
@@ -35,22 +37,22 @@ set(IDYNTREE_CORE_EXP_HEADERS include/iDynTree/Core/Axis.h
                               include/iDynTree/Core/AngularForceVector3.h
                               include/iDynTree/Core/LinearMotionVector3.h
                               include/iDynTree/Core/AngularMotionVector3.h
-                              include/iDynTree/Core/Wrench.h)
-
-set(IDYNTREE_CORE_EXP_PRIVATE_INCLUDES include/iDynTree/Core/PrivateUtils.h
-                                       include/iDynTree/Core/PrivateMotionForceVertorAssociations.h
-                                       include/iDynTree/Core/PrivatePreProcessorUtils.h
-                                       include/iDynTree/Core/PrivateSemanticsMacros.h
-                                       include/iDynTree/Core/GeomVector3.h
-                                       include/iDynTree/Core/MotionVector3.h
-                                       include/iDynTree/Core/ForceVector3.h
-                                       include/iDynTree/Core/SpatialVector.h)
+                              include/iDynTree/Core/Wrench.h
+                              include/iDynTree/Core/PrivateUtils.h
+                              include/iDynTree/Core/PrivateMotionForceVertorAssociations.h
+                              include/iDynTree/Core/PrivatePreProcessorUtils.h
+                              include/iDynTree/Core/PrivateSemanticsMacros.h
+                              include/iDynTree/Core/GeomVector3.h
+                              include/iDynTree/Core/MotionVector3.h
+                              include/iDynTree/Core/ForceVector3.h
+                              include/iDynTree/Core/SpatialVector.h)
 
 
 set(IDYNTREE_CORE_EXP_SOURCES src/Axis.cpp
                               src/ArticulatedBodyInertia.cpp
                               src/ClassicalAcc.cpp
                               src/Direction.cpp
+                              src/InertiaNonLinearParametrization.cpp
                               src/MatrixDynSize.cpp
                               src/LinearForceVector3.cpp
                               src/AngularForceVector3.cpp
