Add regression test for issue https://github.com/robotology/idyntree/issues/149

--- a/src/icub-kdl/tests/CMakeLists.txt
+++ b/src/icub-kdl/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ macro(add_icub_test testName)
 endmacro()
 
 add_icub_test(iCubLeftArmRegressor)
+add_icub_test(iDynTreeCOM)
 add_icub_test(iDynTreeJacobian)
 add_icub_test(iDynTreeRelativeJacobian)
 add_icub_test(iDynTreeWholeBodyFTsensorEstimate)
