--- a/examples/fixedBaseGravityCompensation/CMakeLists.txt
+++ b/examples/fixedBaseGravityCompensation/CMakeLists.txt
@@ -3,30 +3,20 @@
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 #
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
+cmake_minimum_required(VERSION 2.8.11)
 
-SET(PROJECTNAME fixedBaseGravityCompensation)
+project(fixedBaseGravityCompensation)
 
-PROJECT(${PROJECTNAME})
+find_package(YARP REQUIRED)
+find_package(iDynTree REQUIRED)
 
-FIND_PACKAGE(YARP REQUIRED)
-FIND_PACKAGE(iDynTree REQUIRED)
+set(folder_source main.cpp)
 
-SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_MODULE_PATH})
+source_group("Source Files" FILES ${folder_source})
 
-SET(folder_source main.cpp)
+add_executable(${PROJECT_NAME} ${folder_source})
 
-SOURCE_GROUP("Source Files" FILES ${folder_source})
-
-message(STATUS "iDynTree_INCLUDE_DIRS is ${iDynTree_INCLUDE_DIRS}")
-
-INCLUDE_DIRECTORIES(${iDynTree_INCLUDE_DIRS}
-                    ${YARP_INCLUDE_DIRS})
-
-
-ADD_EXECUTABLE(${PROJECTNAME} ${folder_source})
-
-TARGET_LINK_LIBRARIES(${PROJECTNAME} ${YARP_LIBRARIES}
+target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES}
                                      ${iDynTree_LIBRARIES})
 
 
