--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,22 @@ matrix:
   include:
     - os: linux
       compiler: clang
-      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Debug", CMAKE_PREFIX_PATH="/home/travis/build/robotology/codyco-superbuild/build/install"
+      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Debug", CMAKE_PREFIX_PATH="/home/travis/build/robotology/codyco-superbuild/build/install", VALGRIND_TESTS="ON"
     - os: linux
       compiler: clang
-      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Release", CMAKE_PREFIX_PATH="/home/travis/build/robotology/codyco-superbuild/build/install"
+      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Release", CMAKE_PREFIX_PATH="/home/travis/build/robotology/codyco-superbuild/build/install", VALGRIND_TESTS="ON"
     - os: linux
       compiler: gcc
-      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Debug", CMAKE_PREFIX_PATH="/home/travis/build/robotology/codyco-superbuild/build/install"
+      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Debug", CMAKE_PREFIX_PATH="/home/travis/build/robotology/codyco-superbuild/build/install", VALGRIND_TESTS="ON"
     - os: linux
       compiler: gcc
-      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Release", CMAKE_PREFIX_PATH="/home/travis/build/robotology/codyco-superbuild/build/install"
+      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Release", CMAKE_PREFIX_PATH="/home/travis/build/robotology/codyco-superbuild/build/install", VALGRIND_TESTS="ON"
     - os: osx
       compiler: gcc
-      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Debug", CMAKE_PREFIX_PATH="/Users/travis/build/robotology/codyco-superbuild/build/install"
+      env: TRAVIS_CMAKE_GENERATOR="Unix Makefiles", TRAVIS_BUILD_TYPE="Debug", CMAKE_PREFIX_PATH="/Users/travis/build/robotology/codyco-superbuild/build/install", VALGRIND_TESTS="OFF"
     - os: osx
       compiler: clang
-      env: TRAVIS_CMAKE_GENERATOR="Xcode", TRAVIS_BUILD_TYPE="Release", CMAKE_PREFIX_PATH="/Users/travis/build/robotology/codyco-superbuild/build/install"
+      env: TRAVIS_CMAKE_GENERATOR="Xcode", TRAVIS_BUILD_TYPE="Release", CMAKE_PREFIX_PATH="/Users/travis/build/robotology/codyco-superbuild/build/install", VALGRIND_TESTS="OFF"
 
 before_script:
   # workaround around opencv linking problem in clang:
@@ -43,16 +43,11 @@ before_script:
   - cmake --build . --target iDynTree-dependees 
   - pwd
   - cd ../..
-  # deal with TinyXML linking problems
-  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/travis/build/robotology/codyco-superbuild/build/install/lib
-  - ls /home/travis/build/robotology/codyco-superbuild/build/install/lib
-  - echo $LD_LIBRARY_PATH
-  - sudo ldconfig
   # Prepare iDynTree build
   - cd idyntree
   - mkdir build
   - cd build
-  - cmake -DCMAKE_BUILD_TYPE=${TRAVIS_BUILD_TYPE} -DIDYNTREE_COMPILE_TESTS:BOOL=ON -DIDYNTREE_RUN_VALGRIND_TESTS:BOOL=ON -DCODYCO_TRAVIS_CI:BOOL=ON -DIDYNTREE_USES_PYTHON:BOOL=ON -DIDYNTREE_USES_LUA:BOOL=ON ..
+  - cmake -DCMAKE_BUILD_TYPE=${TRAVIS_BUILD_TYPE} -DIDYNTREE_COMPILE_TESTS:BOOL=ON -DIDYNTREE_RUN_VALGRIND_TESTS:BOOL=${VALGRIND_TESTS} -DCODYCO_TRAVIS_CI:BOOL=ON -DIDYNTREE_USES_PYTHON:BOOL=ON -DIDYNTREE_USES_LUA:BOOL=ON ..
 
 script:
   - cmake --build . --config ${TRAVIS_BUILD_TYPE}
