--- a/src/model_io/CMakeLists.txt
+++ b/src/model_io/CMakeLists.txt
@@ -10,7 +10,7 @@ if(IDYNTREE_ENABLE_SYMORO_PAR AND IDYNTREE_USES_KDL)
 endif()
 
 if(IDYNTREE_USES_ICUB_MAIN AND IDYNTREE_USES_KDL)
-    add_subdirectory(iKin)
+    add_subdirectory(iKin-kdl)
 endif()
 
 if(IDYNTREE_COMPILE_TESTS AND IDYNTREE_USES_KDL)
