--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -35,13 +35,13 @@ if(IDYNTREE_USES_ICUB_MAIN AND IDYNTREE_USES_KDL)
     idyntree_add_tool_yarp_kdl(par2urdf par2urdf.cpp)
 endif()
 
-if(IDYNTREE_USES_ICUB_MAIN AND IDYNTREE_USES_KDL)
+if(IDYNTREE_USES_ICUB_MAIN)
   find_package(YARP)
   find_package(ICUB)
   add_definitions(-D_USE_MATH_DEFINES)
   add_executable(urdf2dh urdf2dh)
   target_include_directories(urdf2dh PUBLIC ${ICUB_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
-  target_link_libraries(urdf2dh iKin idyntree-core idyntree-regressors  idyntree-modelio-urdf-kdl idyntree-modelio-ikin)
+  target_link_libraries(urdf2dh iKin idyntree-core idyntree-regressors  idyntree-model idyntree-icub idyntree-high-level)
   install(TARGETS urdf2dh DESTINATION bin)
 endif()
 
