[estimation] Added KDL-free and YARP-free SimpleLeggedOdometry class

--- a/src/estimation/CMakeLists.txt
+++ b/src/estimation/CMakeLists.txt
@@ -5,12 +5,14 @@
 project(iDynTree_Estimation CXX)
 
 set(IDYNTREE_ESTIMATION_HEADERS include/iDynTree/Estimation/ExternalWrenchesEstimation.h
-                                include/iDynTree/Estimation/ExtWrenchesAndJointTorquesEstimator.h)
+                                include/iDynTree/Estimation/ExtWrenchesAndJointTorquesEstimator.h
+                                include/iDynTree/Estimation/SimpleLeggedOdometry.h)
 
 set(IDYNTREE_ESTIMATION_PRIVATE_INCLUDES )
 
 set(IDYNTREE_ESTIMATION_SOURCES src/ExternalWrenchesEstimation.cpp
-                                src/ExtWrenchesAndJointTorquesEstimator.cpp)
+                                src/ExtWrenchesAndJointTorquesEstimator.cpp
+                                src/SimpleLeggedOdometry.cpp)
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_ESTIMATION_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_ESTIMATION_HEADERS})
