[travis] enable ccache
See https://docs.travis-ci.com/user/caching/#ccache-cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: required
 dist: trusty
 language: cpp
+cache: ccache
 
 # set the CMAKE_PREFIX_PATH enviroment variable to get software installed by the superbuild
 matrix:
