Fixed reference to _PRETTY_FUNCTION_

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -19,7 +19,8 @@ if(IDYNTREE_USES_PYTHON OR
 endif()
 
 find_package(SWIG)
-if(SWIG_FOUND)
+# It is possible to compile matlab bindings without using SWIG 
+if(SWIG_FOUND OR IDYNTREE_USES_MATLAB)
     include(UseSWIG)
 
     set_source_files_properties(iDynTree.i PROPERTIES CPLUSPLUS ON)
@@ -51,14 +52,13 @@ if(SWIG_FOUND)
     if(IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB)
        add_subdirectory(matlab)
     endif(IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB)
-endif(SWIG_FOUND)
+endif()
 
 if(IDYNTREE_USES_PYTHON OR
    IDYNTREE_USES_LUA    OR
-   IDYNTREE_USES_MATLAB OR
    IDYNTREE_GENERATED_MATLAB)
    if(NOT SWIG_FOUND)
-       MESSAGE(FATAL_ERROR "Swig not found, impossible to compile iDynTree bindings.")
+       MESSAGE(FATAL_ERROR "Swig not found, impossible to compile or generate iDynTree bindings.")
    endif()
 endif()
 
