Fix inclusion of installed headers before of build headers

--- a/src/icub/CMakeLists.txt
+++ b/src/icub/CMakeLists.txt
@@ -44,3 +44,6 @@ install(TARGETS idyntree-icub
         PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/iDynTree/iCub" COMPONENT dev)
 
 set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS idyntree-icub)
+
+set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
