[appveyor] Use Eigen 3.3-beta1
Until https://github.com/robotology/idyntree/issues/176 is fixed

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,7 @@ build_script:
   - cd c:\projects 
   - hg clone https://bitbucket.org/eigen/eigen
   - cd eigen
+  - hg checkout 3.3-beta1
   - md build
   - cd build 
   - cmake ..
