Final steps in octave integration
* Added CMake logic to run matlab tests under octave
* Added CMake logic for installtion. For now octave plugins are installed in
  CMAKE_INSTALL_LIBDIR/octave , but if a better installation path exist (see
  https://packages.debian.org/wheezy/amd64/octave-image/filelist) we can update it.

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -21,7 +21,7 @@ if(IDYNTREE_USES_PYTHON OR
 endif()
 
 find_package(SWIG)
-# It is possible to compile matlab bindings without using SWIG 
+# It is possible to compile matlab bindings without using SWIG
 if(SWIG_FOUND OR IDYNTREE_USES_MATLAB)
     include(UseSWIG)
 
@@ -52,7 +52,7 @@ if(SWIG_FOUND OR IDYNTREE_USES_MATLAB)
     endif(IDYNTREE_USES_PYTHON)
 
     if(IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB)
-       add_subdirectory(matlab)
+        add_subdirectory(matlab)
     endif()
 
     if(IDYNTREE_USES_OCTAVE)
@@ -63,9 +63,9 @@ endif()
 
 if(IDYNTREE_USES_PYTHON OR
    IDYNTREE_USES_LUA    OR
+   IDYNTREE_USES_OCTAVE OR
    IDYNTREE_GENERATED_MATLAB)
    if(NOT SWIG_FOUND)
        MESSAGE(FATAL_ERROR "Swig not found, impossible to compile or generate iDynTree bindings.")
    endif()
 endif()
-
