--- a/src/tests/data/CMakeLists.txt
+++ b/src/tests/data/CMakeLists.txt
@@ -16,7 +16,8 @@ set(IDYNTREE_TESTS_URDFS icub.urdf
                          icubTwoLinks.urdf
                          robotModelTestTwoLinks.urdf
                          iCubGenova02.urdf
-                         iCubDarmstadt01.urdf)
+                         iCubDarmstadt01.urdf
+                         twoLinksWithoutBaseSensors.urdf)
 
 
 # configure an header containing the path
