--- a/src/tests/data/testModels.h.in
+++ b/src/tests/data/testModels.h.in
@@ -14,6 +14,7 @@ const char *IDYNTREE_TESTS_URDFS[] = {"oneLink.urdf",
                                       "twoLinks.urdf",
                                       "threeLinks.urdf",
                                       "twoLinksFixed.urdf",
+                                      "twoLinksWithoutBaseSensors.urdf",
                                       "icubTwoLinks.urdf",
                                       "icub.urdf",
                                       "icub_model.urdf",
@@ -21,10 +22,11 @@ const char *IDYNTREE_TESTS_URDFS[] = {"oneLink.urdf",
                                       "bigman.urdf",
                                       "robotModelTestTwoLinks.urdf",
                                       "icub2BB5Sea.urdf",
-                                      "iCubGenova02.urdf"
+                                      "iCubGenova02.urdf",
+                                      "iCubDarmstadt01.urdf"
 };
 
-const unsigned int IDYNTREE_TESTS_URDFS_NR = 12;
+const unsigned int IDYNTREE_TESTS_URDFS_NR = 14;
 
 inline std::string getAbsModelPath(std::string modelName)
 {
