--- a/src/estimation/tests/CMakeLists.txt
+++ b/src/estimation/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ macro(add_estimation_test classname)
     endif()
 endmacro()
 
+add_estimation_test(BerdyHelper)
 add_estimation_test(ExternalWrenchesEstimation)
 add_estimation_test(ExtWrenchesAndJointTorquesEstimator)
 add_estimation_test(SimpleLeggedOdometry)
