Use ccache also on osx and clang
From https://github.com/robotology/yarp/commit/0316541bd27ada90b396cd53d37d9ca68c8fe17d#comments

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,17 @@ before_script:
   - sudo ln /dev/null /dev/raw1394
   - cmake --version
   - cd ..
+  
+  # Install ccache on osx
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install ccache; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export PATH="/usr/local/opt/ccache/libexec:$PATH"; fi
+
+  # Use ccache also for clang and clang++ on linux
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CC" == "clang" ]; then sudo ln -s ../../bin/ccache /usr/lib/ccache/clang; fi; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CC" == "clang" ]; then export CFLAGS="-Qunused-arguments"; fi; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CXX" == "clang++" ]; then sudo ln -s ../../bin/ccache /usr/lib/ccache/clang++; fi; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-Qunused-arguments"; fi; fi
+
   # use superbuild for getting iDynTree dependencies
   - git clone https://github.com/robotology/codyco-superbuild
   - cd codyco-superbuild
