[cmake] Add MOxUnit support in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,20 +55,10 @@ if(IDYNTREE_USES_KDL)
     find_package(TinyXML    REQUIRED)
 endif()
 
-# An external TinyXML is compulsory if compiling
-# with KDL support enabled, because KDL uses urdfdom
-# that include TinyXML in its public headers.
-# If KDL is not enabled, we can use also the internal
-# copy of TinyXML, given that we don't include it in
-# our public headers
-if(NOT IDYNTREE_USES_KDL)
-    find_package(TinyXML)
-    # If no TinyXML is found in the system, use the internal one
-    if(NOT TinyXML_FOUND)
-        add_subdirectory(extern)
-    endif()
-endif()
-
+# Add external libraries that are embedded in iDynTree
+# source tree, if necessary (by default does not adds
+# anything) feel free to check teh logic inside
+add_subdirectory(extern)
 
 include(AddInstallRPATHSupport)
 add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/bin"
